Precache overlays. Not highlight regions if globe is spinup on mobile. Fix tap highlight color on iOS.

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ body {
   text-align:center;
 }
 
+body, #container, #container canvas {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 #info {
   position: absolute;
   top: 0px; width: 100%;
